# todoist-bugger

./: .env.example  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
