[project]
name = "todoist-bugger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv==1.0.0",
    "python-json-logger>=3.3.0",
    "requests==2.31.0",
    "ruff>=0.11.7",
    "schedule==1.2.1",
    "todoist-api-python==2.0.0",
]
